- Thêm trang Settings - Cập nhật chức năng light/dark mode - Chỉnh sửa các trang như: AppShell, App, MauiProgram để clean code.

--- a/AMS.csproj
+++ b/AMS.csproj
@@ -19,7 +19,7 @@
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>AMS</ApplicationTitle>
+		<ApplicationTitle>AMS - Quản lý thuê</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.ams</ApplicationId>
@@ -88,6 +88,12 @@
 
 	<ItemGroup>
 	  <MauiXaml Update="LoginShell.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Resources\Styles\LightTheme.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Resources\Styles\DarkTheme.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\EditHousePage.xaml">
