Thêm chức năng CRUD cho: - House - Room ! Chưa đồng bộ hóa database trên Desktop & mobile

--- a/AMS.csproj
+++ b/AMS.csproj
@@ -99,6 +99,9 @@
 	  <MauiXaml Update="Views\EditHousePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\EditRoomPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\HousesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
