- Điều chỉnh tương tác với Trang House - Điều chỉnh danh sách Room + Thêm trang Detail Room

--- a/AMS.csproj
+++ b/AMS.csproj
@@ -117,6 +117,9 @@
 	  <MauiXaml Update="Views\ReportsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\RoomDetailPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\RoomsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
