Cập nhật Appshell - Bắt đầu triển khai trang Hợp đồng

--- a/AMS.csproj
+++ b/AMS.csproj
@@ -130,6 +130,9 @@
 	  <MauiXaml Update="Views\MaintenancesPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\OverviewPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\PaymentsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
