Hoàn thiện hợp đồng 100%, chưa custom hợp đồng.

--- a/AMS.csproj
+++ b/AMS.csproj
@@ -87,6 +87,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0-rc.1.25451.107" />
 		<PackageReference Include="MimeKit" Version="4.14.0" />
+		<PackageReference Include="QuestPDF" Version="2025.7.4" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.11" />
 	</ItemGroup>
 
