FIX BUG HỢP ĐỒNG, CÀI ĐẶT THÔNG TIN CHỦ NHÀ, GỬI ĐƯỢC FILE PDF. - Chưa thiết kế lại nội dung phụ lục PDF

--- a/AMS.csproj
+++ b/AMS.csproj
@@ -20,7 +20,7 @@
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>AMS - Quản lý thuê</ApplicationTitle>
+		<ApplicationTitle>QLT - Quản lý thuê</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.ams</ApplicationId>
@@ -41,8 +41,8 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
-
+		<!--<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />-->
+		<MauiIcon Include="Resources\MyAppIcon\appicon.png"/>
 		<!-- Splash Screen -->
 		<MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
 
@@ -98,6 +98,9 @@
 	  <Compile Update="Views\EditContractPage.xaml.cs">
 	    <DependentUpon>EditContractPage.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="Views\ForgotPasswordPage.xaml.cs">
+	    <DependentUpon>ForgotPasswordPage.xaml</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -138,6 +141,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\MaintenancesPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\ForgotPasswordPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Views\OverviewPage.xaml">
